[package]
name = "alpaca-kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.0"
serde_json = "1.0.116"
http = "1.1.0"
derive_builder = "0.20.0"
serde = { version = "1.0.200", features = ["derive"] }
bytes = "1.6.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
thiserror = "1.0.60"
serde_urlencoded = "0.7.1"
log = "0.4.21"
typed-builder = "0.18.2"
async-trait = "0.1.80"
itertools = "0.12.1"
tokio = "1.37.0"
